--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,6 +1,6 @@
 <main > 
     <header class = "header-home">        
-        <p-button label="Entrar" [text] = "true"/>
+      <button class="btn">entrar</button>
     </header>         
     <div class = "container-list">        
         <h1>Descubra, saboreie e compartilhe o melhor café com o Cafezito</h1>
@@ -156,8 +156,8 @@
         </div>
       </div>
       <div class = "logos">
-        <i class="pi pi-facebook"></i>
-        <i class="pi pi-instagram"></i>
+        <i class="pi pi-facebook" style="font-size: 2rem"></i>        
+        <i class="pi pi-instagram"  style="font-size: 2rem"></i>
       </div>
              
          
