feat: lista cupons

--- a/src/app/features/vouchers/_components/list-vouchers/list-vouchers.component.html
+++ b/src/app/features/vouchers/_components/list-vouchers/list-vouchers.component.html
@@ -10,11 +10,12 @@
                 @if(item.redeemedAt){
                     <span>Resgatado</span>
                 }@else {
-                    <p-button size="small" label="Resgatar cupom"></p-button>
+                    <p-button size="small" label="Resgatar cupom" (onClick)="redeemVoucher(item.id)"></p-button>
                 }
             </div>
         }@empty {
             <p>Nenhum cupom promocional disponível</p>
         }
     }
+    <p-toast />
 </section>
