feat: adicionando listagem user voucher

--- a/src/app/core/scss/product-tags.scss
+++ b/src/app/core/scss/product-tags.scss
@@ -14,7 +14,7 @@
     width: fit-content;
 }
 
-.petfriendly {
+.pet-friendly {
     background-color: #ffe5b4;
     border-radius: 7px;
     color: #a64b00;
