--- a/src/app/core/scss/variables.scss
+++ b/src/app/core/scss/variables.scss
@@ -5,6 +5,7 @@ $other-white: #fff;
 $black: #100701;
 $error-color: #ff5757;
 $success-color: #22c55e;
+$bg-redeemed: #C5E2FD;
 $primary-color-transparent: rgba(218, 209, 200, 0.3);
 $primary-dark-color-transparent: rgba(38, 19, 8, 0.24);
 
