--- a/src/app/features/vouchers/_components/list-vouchers/list-vouchers.component.scss
+++ b/src/app/features/vouchers/_components/list-vouchers/list-vouchers.component.scss
@@ -11,6 +11,12 @@
     min-height: 500px;
     overflow: hidden;
 
+    @include tablet {
+        align-items:center;
+        justify-content: center;
+        padding: 0 10px;
+    }
+
     &__card {
         align-items: center;
         border: 3px dashed var(--primary-100);
@@ -35,6 +41,19 @@
         &_voucher {
             font-size: $font-size-4xl;
             margin: 0;
+        }
+
+        &_redeemed {
+            background-color: $bg-redeemed;
+            color:var(--primary-300);
+            font-weight: $font-weight-extra-bold;
+            padding: 30px 0;
+            text-align: center;
+            width: 100%;
+        }
+
+        @include tablet {
+            margin: 10px 0;
         }
     }
 }
