--- a/src/app/features/vouchers/_components/user-vouchers/user-vouchers.component.scss
+++ b/src/app/features/vouchers/_components/user-vouchers/user-vouchers.component.scss
@@ -3,8 +3,9 @@
 
 
 .container-user-vouchers {
-    display: flex;
     color: var(--primary-100);
+    display: flex;
+    flex-direction: column;
 
     &__card {
         border-bottom: 2px dashed var(--primary-100);
