--- a/src/app/features/vouchers/vouchers.component.scss
+++ b/src/app/features/vouchers/vouchers.component.scss
@@ -11,6 +11,10 @@
 
     &__tab {
         padding: 0 60px;
+
+        @include mobile {
+            padding: 0 10px; 
+        }
     }
 
     .header {
