--- a/src/app/features/coffe-shop/_components/detail/detail.component.scss
+++ b/src/app/features/coffe-shop/_components/detail/detail.component.scss
@@ -86,6 +86,11 @@
         @include tablet {
             justify-content: center;
             margin: 0 30px;
+
+            img {
+                height: 300px;
+                width: 300px;
+            }
         }
     }
 
@@ -97,18 +102,40 @@
 
         @include tablet {
             justify-content: center;
-            margin: 30px 150px 0 30px;
+            margin: 30px 100px 0 30px;
+        }
+
+        &_address {
+            width: 30%;
+
+            @include mobile {
+                width: 90%;
+            }
+
+            p-button { margin-left: 15px;}
         }
 
         &_product {
+            align-items: center;
             display: flex;
+            flex-wrap: wrap;
       
             span {
               font-size: $font-size-normal;
               font-weight: $font-weight-bold;
               margin: 5px;
             }
-          }
+        }
+
+        &_text {
+            margin-right: 15px;
+            width: 65%;
+
+            @include mobile {
+                margin: 0;
+                width: 90%;
+            }
+        }
 
         h2, h3 {
             display: flex;
@@ -125,6 +152,7 @@
 
         p {
             font-size: $font-size-medium;
+            text-align: justify;
         }
 
     }
