--- a/src/app/features/coffe-shop/_components/list/list.component.scss
+++ b/src/app/features/coffe-shop/_components/list/list.component.scss
@@ -20,10 +20,10 @@
     background: var(--primary-600);
     border-radius: 25px;
     color: var(--primary-100);
-    height: 350px;
+    height: 450px;
     margin: 100px 10px 0 10px;
     padding: 0 20px;
-    width: 250px;
+    width: 270px;
 
     p-button {
       margin: 0 50px;
@@ -67,7 +67,10 @@
     }
 
     &_product {
+      align-items: center;
       display: flex;
+      flex-wrap: wrap;
+      height: 115px;
       position: relative;
       top: -80px;
 
