--- a/src/app/features/vouchers/_components/user-vouchers/user-vouchers.component.scss
+++ b/src/app/features/vouchers/_components/user-vouchers/user-vouchers.component.scss
@@ -6,6 +6,9 @@
     color: var(--primary-100);
     display: flex;
     flex-direction: column;
+    position: relative;
+    min-height: 500px;
+    overflow: hidden;
 
     &__card {
         border-bottom: 2px dashed var(--primary-100);
