--- a/src/app/core/scss/product-tags.scss
+++ b/src/app/core/scss/product-tags.scss
@@ -14,7 +14,7 @@
     width: fit-content;
 }
 
-.petfriendly {
+.pet-friendly {
     background-color: #ffe5b4;
     border-radius: 7px;
     color: #a64b00;
@@ -30,7 +30,7 @@
     width: fit-content;
 }
 
-.wifi {
+.wi-fi {
     background-color: #dfe7f2;
     border-radius: 7px;
     color: #1c2a3f;
