--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -27,36 +27,53 @@
     img {       
         position: absolute;
         max-height: 500px;        
-        top: 33%; // Alinha verticalmente ao centro (opcional)
-        right: 0; // Encosta no lado direito
-        transform: translateY(-50%); // Centraliza verticalmente
-        margin-right: 15rem; // Espaçamento adicional, se necessário
+        top: 33%; 
+        right: 0; 
+        transform: translateY(-50%); 
+        margin-right: 15rem; 
         filter: opacity(85%);        
         border-radius: 10px;
         padding: 5px;        
-        }   
+        }         
+  
+      
+      @media (max-width: 768px) {
+          .container-list {
+              padding: 20px;
+          }
+      
+          .container-list h1 {
+              font-size: clamp(2rem, 5vw, 3.5rem); 
+              width: 100%;              
+              margin: 0 auto; 
+              padding: 20px;
+          }
+      
+          .container-list img {              
+              max-width: 100%;              
+              margin: 20px auto; 
+             
+          }
+      }
+      
+      
+      @media (max-width: 480px) {
+          .container-list {
+              padding: 10px;
+          }
+      
+          .container-list h1 {
+              font-size: clamp(1.5rem, 5vw, 2.5rem); /* Texto ainda menor para celulares */
+          }
+      
+          .container-list img {
+              margin-top: 10px; /* Espaçamento adicional no topo */
+              max-height: 200px; /* Limita o tamanho da imagem */
+          }
+      }
+      
         
         
-        @include tablet {
-            max-height: 400px;
-        }
-
-        @media (max-width: 768px) {
-            flex-direction: column;
-            padding: 20px;
-        
-            h1 {
-              font-size: clamp(1.5rem, 4vw, 3rem);
-              width: 100%;
-              text-align: center; // Centraliza em telas menores
-            }
-        
-            img {
-              position: static; // Remove posição fixa
-              margin: 0 auto; // Centraliza no eixo horizontal
-              max-height: 30vh;
-            }
-        }   
 
 }
 .header-home {
@@ -84,21 +101,21 @@
 }
 .titulo {
     background-color: #F2F2F2;
-    display: flex; // Flexbox para organizar os blocos
-    flex-direction: column; // Organiza os filhos verticalmente
-    width: 100%; // Faz o contêiner ocupar toda a largura
-    gap: 14px; // Espaçamento entre os blocos
+    display: flex; 
+    flex-direction: column; 
+    width: 100%; 
+    gap: 14px; 
   
   
   .titulo_cafezito {
     background-color: #F2F2F2;
-    display: flex; // Flexbox para alinhar horizontalmente
-    justify-content: space-between; // Espaça os itens de ponta a ponta
-    align-items: center; // Alinha verticalmente ao centro
-    width: 90%; // Ocupa toda a largura
+    display: flex; 
+    justify-content: space-between; 
+    align-items: center; 
+    width: 90%; 
     height: 200px;
-    padding: 0; // Adiciona espaçamento interno (opcional)
-    box-sizing: border-box; // Inclui padding no cálculo da largura total
+    padding: 0; 
+    box-sizing: border-box; 
     
   }
   
@@ -116,13 +133,13 @@
   }
   
   .titulo_cafezito img {
-    display: flex; // Flexbox para organizar as imagens
-    justify-content: space-between; // Espaça as imagens de ponta a ponta
-    align-items: center; // Alinha verticalmente ao centro
-    width: 100%; // Ocupa toda a largura
-    padding: 0 ; // Espaçamento interno
-    gap: 16px; // Espaçamento entre as imagens (opcional)
-    box-sizing: border-box; // Inclui padding no cálculo da largura total
+    display: flex; 
+    justify-content: space-between; 
+    align-items: center; 
+    width: 100%; 
+    padding: 0 ; 
+    gap: 16px; 
+    box-sizing: border-box; 
     margin-bottom: 30px;
     margin-top: 50px;
     margin-right:60px;
@@ -132,60 +149,48 @@
   }
   
   .imagens {
-    display: flex; // Flexbox para organizar as imagens
-    justify-content: space-between; // Espaça as imagens de ponta a ponta
-    align-items: center; // Alinha verticalmente ao centro
-    width: 100%; // Ocupa toda a largura
-    padding: 0 ; // Espaçamento interno
-    gap: 16px; // Espaçamento entre as imagens (opcional)
-    box-sizing: border-box; // Inclui padding no cálculo da largura total
+    display: flex; 
+    justify-content: space-between; 
+    align-items: center; 
+    width: 100%; 
+    padding: 0 ; 
+    gap: 16px; 
+    box-sizing: border-box; 
     
   }
   
   .imagens img {
-    width: 32%; // Ajusta o tamanho das imagens
-    height: auto; // Mantém a proporção
-    object-fit: contain; // Ajusta o conteúdo
+    width: 32%; 
+    height: auto; 
+    object-fit: contain; 
     margin-bottom: 16px;
     margin-top: 16px;
     margin-right: 0;
   }
-  @media (max-width: 768px) {
-    flex-direction: column;
-
-    .titulo_cafezito {
-      flex-direction: column;
-      gap: 20px;
-    }
-
-    .titulo_cafezito img {
-      width: 100%; // Imagens ajustáveis
-    }
-  }
 }
 .descricao {
-    display: flex; // Define um layout horizontal
-    align-items: center; // Alinha verticalmente os itens no centro
-    gap: 250px; // Espaçamento entre a imagem e o texto
-    background-color: #896A50; // Cor de fundo para a seção
-    padding: 0; // Espaçamento interno
+    display: flex; 
+    align-items: center; 
+    gap: 250px; 
+    background-color: #896A50; 
+    padding: 0; 
     height: 100%;        
     width: 100%;
     
   
     &__imagem {
-      width: 35%; // Define a imagem ocupando metade da largura
-      height: auto; // Mantém a proporção da imagem
-      object-fit: cover; // Ajusta o conteúdo da imagem para cobrir o espaço disponível
-      border-radius: 8px; // Arredonda os cantos da imagem
+      width: 35%; 
+      height: auto; 
+      object-fit: cover; 
+      border-radius: 8px; 
     }
   
     &__texto {
-      width: 50%; // Define o texto ocupando metade da largura
+      width: 50%; 
       font-size: 2rem;
       font-weight: 200px; 
-      line-height: 1.5; // Altura da linha para melhorar a legibilidade
-      color:#DAD1C8; // Cor do texto (branco)      
+      line-height: 1.5; 
+      color:#DAD1C8;       
       padding: 40px 100px;
       position: relative; 
       z-index: 2;    
@@ -193,23 +198,23 @@
     }
     @media (max-width: 768px) {
         .descricao {
-          flex-direction: column; // Empilha os itens verticalmente
-          align-items: stretch; // Faz os itens ocuparem toda a largura
+          flex-direction: column; 
+          align-items: stretch; 
         }
       
         .descricao__imagem,
         .descricao__texto {
-          width: 100%; // Cada item ocupa toda a largura em telas menores
+          width: 100%; 
         }
       }      
 }
 
 .objetivo {
-    display: flex; // Define um layout horizontal
-    align-items: center; // Alinha verticalmente os itens no centro
-    gap: 250px; // Espaçamento entre a imagem e o texto
-    background-color:  #f5f5f5; // Cor de fundo para a seção
-    padding: 50px; // Espaçamento interno 
+    display: flex; 
+    align-items: center; 
+    gap: 250px; 
+    background-color:  #f5f5f5; 
+    padding: 50px; 
     top: 30px;               
     width: 100%;
      
@@ -232,8 +237,8 @@
     } 
   
     &__imagem {
-        width: 30%; // Define a imagem ocupando metade da largura         
-        border-radius: 8px; // Arredonda os cantos da imagem
+        width: 30%;        
+        border-radius: 8px; 
         top: 30px;        
         height: 50%;   
       
@@ -252,6 +257,44 @@
         }
     }
 }
+
+@media (max-width: 480px) {
+    .container-list {
+        padding: 10px;
+    }
+
+    h1 {
+        font-size: clamp(1.5rem, 5vw, 2.5rem);
+    }
+
+    img {
+        max-width: 100%;
+        height: auto;
+        margin: 0 auto;
+    }
+
+    .descricao, .objetivo {
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+    }
+
+    .card {
+        flex: 1 1 100%; /* Faz os cards ocuparem 100% da largura */
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    .grid-container {
+        justify-content: center; /* Centraliza os itens */
+        gap: 2rem;
+    }
+
+    .card {
+        flex: 1 1 calc(50% - 1rem); /* Ajusta os cards para 2 colunas */
+    }
+}
+
 .diferencial {
   position: absolute;
   width: 100%;
@@ -264,11 +307,11 @@
 }
 
 .diferenciais {
-display: flex; // Define um layout horizontal
-align-items: center; // Alinha verticalmente os itens no centro
-gap: 0px; // Espaçamento entre a imagem e o texto
+display: flex; 
+align-items: center; 
+gap: 0px; 
 background-color:  #BFAE9F;
-padding: 0px; // Espaçamento interno 
+padding: 0px; 
 top: 0px;               
 width: 100%;
 
@@ -277,17 +320,17 @@ width: 100%;
 .grid-container {
   background-color: #BFAE9F;
   display: flex;
-  flex-wrap: wrap; // Permite quebra de linha
-  justify-content: space-between; // Espaçamento entre os itens
+  flex-wrap: wrap; 
+  justify-content: space-between; 
   max-width: 1700px;
   top: 50px;
   margin: 0 auto;
-  gap: 1.4rem; // Espaçamento entre os itens
+  gap: 1.4rem; 
    
 }
 
 .card {
-  flex: 1 1 calc(33.333% - 1rem); // 3 colunas
+  flex: 1 1 calc(33.333% - 1rem); 
   background-color: #BFAE9F;
   padding: 1.5rem;
   color:#261308;
@@ -301,7 +344,7 @@ width: 100%;
   background-color: #896A50;
   margin: 20px 0;
 }
-// Container principal
+
 .homem-cafeteria {
   background-color: #896A50;
   height: 50%;
@@ -344,8 +387,8 @@ width: 100%;
   .image-container {
     position: absolute;
     max-height: 300px;   
-    right: 0; // Encosta no lado direito    
-    margin-right: 15rem; // Espaçamento adicional, se necessário
+    right: 0;  
+    margin-right: 15rem; 
     margin-bottom: 5px;
     margin-top: 100px;
     filter: opacity(85%);        
@@ -374,9 +417,9 @@ width: 100%;
     margin-right:15rem;        
     margin-bottom: 20px;       
     width: 100%;    
-    justify-content: flex-end; /* Alinha os itens à direita */
-    gap: 20px; /* Espaçamento entre os ícones */
-    padding: 10px 20px; /* Espaçamento interno para ajuste de layout */
+    justify-content: flex-end; 
+    gap: 20px; 
+    padding: 10px 20px; 
     color:#DAD1C8; 
 }
           
