ajuste de imagem primeira sessão da home

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -4,7 +4,7 @@
     </header>         
     <div class = "container-list">        
         <h1>Descubra, saboreie e compartilhe o melhor café com o Cafezito</h1>
-        <img [src]="graosHome" alt="Grãos">                                
+        <img [src]="graosHome" alt="Grãos" />                                
     </div>        
     <div class="titulo">
         <div class ="titulo_cafezito">
