--- a/src/app/features/vouchers/_components/list-vouchers/list-vouchers.component.html
+++ b/src/app/features/vouchers/_components/list-vouchers/list-vouchers.component.html
@@ -7,7 +7,7 @@
                 <h2 class="vouchers__card_voucher">{{item.voucher}}</h2>
                 <p class="vouchers__card_description">{{item.voucherDescription}}</p>
                 <h3 class="vouchers__card_coffee">{{item.coffeeShop.name}}</h3>
-                @if(item.redeemedAt){
+                @if(isVoucherRedeemed(item.id)){
                     <span class="vouchers__card_redeemed">Resgatado</span>
                 }@else {
                     <p-button size="small" label="Resgatar cupom" (onClick)="redeemVoucher(item.id)"></p-button>
